--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.4.1",
     "react-google-maps": "^9.4.5",
     "react-scripts": "1.1.4",
+    "react-xml-parser": "^1.0.7",
     "recompose": "^0.27.1"
   },
   "scripts": {
