fetches and shows data for latest sounding correctly, regardless of sounding location

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.2",
+    "rc-slider": "^8.6.1",
     "react": "^16.4.1",
-    "react-bootstrap-slider": "^2.1.5",
     "react-dom": "^16.4.1",
     "react-google-maps": "^9.4.5",
     "react-scripts": "1.1.4",
